--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "reactjs-media": "^2.2.0"
+        "reactjs-media": "^2.2.0",
+        "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.24",
